<resources>
    <string name="app_name">Graduation</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="publish_button">Publish</string>
    <string name="stop_button">Stop</string>

    <string name="server_hint">Server</string>
    <string name="port_hint">Port</string>
    <string name="client_id_hint">Client ID</string>

    <string name='dateFormat'>dd/MM/yy \'at\' HH:mm:ss</string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="connection_lost">%1$s has lost connection to %2$s</string>

    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
</resources>
