<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/server_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_hint"/>

    <EditText
        android:id="@+id/port_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/port_hint"/>

    <!-- 연결 버튼 -->
    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button"/>

    <!-- 연결/취소 버튼 -->
    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_button"/>

    <!-- 메세지 전송 버튼 -->
    <Button
        android:id="@+id/send_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_button"/>

    <TextView
        android:id="@+id/status_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
